--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.projectKey=Subhas-Dev_DevLab
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
 sonar.sources=.
+sonar.modules=AspNet_Lab/AspNet_Lab,VirtualLab
